# music-downloader

./: .cache.csv  .download_links.csv  .gitignore  .~lock..cache.csv#  .~lock..download_links.csv#  README.md  build.sh  contribute.md  notes.md  pyproject.toml  requirements.txt  run_cli.spec  setup.py  slavart.py  test.db
.VSCodeCounter/2022-10-28_12-39-22/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-07_11-51-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-08_16-41-25/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-10_14-10-12/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-14_08-49-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-14_12-36-23/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-14_15-47-38/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-15_14-12-28/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-18_09-40-36/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-23_10-25-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  (+2 more)
assets/: database_structure.sql
documentation/: config.md  connections.md  objects.md  old_implementation.md  program_structure.md  shell.md
src/: .fuse_hidden0000823600000006  .fuse_hidden000083f100000001  .fuse_hidden0000846000000007  __init__.py  __main__.py  actual_donwload.py  build.sh  create_custom_objects.py  donwload.py  download.py  download_links.py  goof.py  lyrics.py  lyrics_.py  main.py  metadata.py  metal_archives.py  music_kraken_cli.py  music_kraken_gtk.py  musify.py  musify_search.py  phonetic_compares.py  pyproject.toml  python.py  run_cli.py  settings.py  setup.py  test.db  test.py  try-programming-interface.py  try.py  try_python.py  url_to_path.py  youtube_music.py  yt_fetch.py
temp/: .cache1.csv  .cache2.csv  .cache3.csv  .~lock..cache2.csv#
website/: index.html  readme.html
(+351 files in other folders)
