[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-kraken"
version = "1.2.1"
description = "An extensive music downloader crawling the internet. It gets its metadata from a couple of metadata providers, and it scrapes the audiofiles."
authors = [{ name = "Hellow2", email = "Hellow2@outlook.de" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/HeIIow2/music-downloader"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
[project.dependencies]
requests = "~=2.28.1"
mutagen = "~=1.46.0"
musicbrainzngs = "~=0.7.1"
jellyfish = "~=0.9.0"
pydub = "~=0.25.1"
youtube_dl = "*"
beautifulsoup4 = "~=4.11.1"
pycountry = "~=22.3.5"


[tool.setuptools.entry_points]
music-kraken = "music_kraken:cli"

[tool.setuptools]
packages = ['music_kraken', 'music_kraken.lyrics', 'music_kraken.not_used_anymore', 'music_kraken.target', 'music_kraken.tagging', 'music_kraken.utils', 'music_kraken.not_used_anymore.sources', 'music_kraken.database', 'music_kraken.static_files']
include_package_data = true
package_dir = {''= 'src', 'music_kraken'= 'src/music_kraken'}
package_data = {'music_kraken'= ['*.sql']}
data_files = ["", ["requirements.txt", "README.md", "version"]]

[tool.setuptools.command.test]
# ...
